--- a/coding/index.html
+++ b/coding/index.html
@@ -1227,7 +1227,7 @@ a.anchor {
         Books & Notes</a>
     </li>
     </li>
-    <li><a href="/coding/https://alfaromartino.github.io/coding">
+    <li><a href="https://alfaromartino.github.io/coding">
           <img src="/coding/assets/icons/code02.png" style="width:15%; height:auto;opacity:0.9;padding-bottom:5px;padding-right:5px;">
               Coding Guides
          </a>
