--- a/books/index.html
+++ b/books/index.html
@@ -1206,7 +1206,7 @@ a.anchor {
         Books & Notes</a>
     </li>
     </li>
-    <li><a href="/books/https://alfaromartino.github.io/coding"><img src="/books/assets/icons/code02.png" 
+    <li><a href="https://alfaromartino.github.io/coding"><img src="/books/assets/icons/code02.png" 
       style="width:15%; height:auto;opacity:0.9;padding-bottom:5px;padding-right:5px;">
               Coding Guides
          </a>
