--- a/datasets/PAGES/01_nace4europe/index.html
+++ b/datasets/PAGES/01_nace4europe/index.html
@@ -1236,7 +1236,7 @@ a.anchor {
         Books & Notes</a>
     </li>
     </li>
-    <li><a href="/datasets/https://alfaromartino.github.io/coding">
+    <li><a href="https://alfaromartino.github.io/coding">
           <img src="/datasets/assets/icons/code02.png" style="width:15%; height:auto;opacity:0.9;padding-bottom:5px;padding-right:5px;">
               Coding Guides
          </a>
