--- a/coding/PAGES/01_heatmaps_world/index.html
+++ b/coding/PAGES/01_heatmaps_world/index.html
@@ -1746,7 +1746,7 @@ h1{
 <ul>
 <li><p><a href="https://alfaromartino.github.io/data/countries_mapCoordinates.csv">World map coordinates</a></p>
 </li>
-<li><p>The Julia code is <a href="/coding/coding/assets/PAGES/01_heatmaps_world/codeDownload">here</a> under the name <code>allCode.jl</code>. If you wish to run the code with the same package versions used in this post, download instead <code>allCode_withPkg.jl</code> along with <code>Project.toml</code> and <code>Manifest.toml</code>.</p>
+<li><p>The Julia code is <a href="/coding/assets/PAGES/01_heatmaps_world/codeDownload">here</a> under the name <code>allCode.jl</code>. If you wish to run the code with the same package versions used in this post, download instead <code>allCode_withPkg.jl</code> along with <code>Project.toml</code> and <code>Manifest.toml</code>.</p>
 </li>
 </ul>
 </li>
@@ -2043,8 +2043,8 @@ ggsave&#40;filename &#61; file.path&#40;&#36;&#40;graphs_folder&#41;,&quot;file_
     <!-- <p class="m-0"> -->
     <div class="container">
        <span class="left-text"><a href="/coding/PAGES\01_heatmaps_world" class="prevPage"><img src="/coding/assets/icons/prev-page.png"
-        style="width:40px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Subsection</a></span>
-       <span class="right-text"><a href="/coding/PAGES\01_heatmaps_world" class="nextPage">Next Subsection <img src="/coding/assets/icons/next-page.png"
+        style="width:40px; height:auto;opacity:0.9;padding-bottom:5px;"> Previous Guide</a></span>
+       <span class="right-text"><a href="/coding/PAGES\01_heatmaps_world" class="nextPage">Next Guide <img src="/coding/assets/icons/next-page.png"
         style="width:40px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
     <span class="center-text">  © Martin Alfaro <br>Website Last Modified on June 13, 2023 </span>  
   </div>
