--- a/datasets/index.html
+++ b/datasets/index.html
@@ -1264,7 +1264,7 @@ a.anchor {
 <style>
 .left_bar {
   z-index: 200;  
-  background-image: linear-gradient(to left bottom, rgb(0, 0, 0), rgb(0, 0, 0) 10%, rgb(63, 99, 136) 80%, rgb(63, 99, 136));  
+  background-image: linear-gradient(to right bottom, rgb(0, 0, 0), rgb(0, 0, 0) 10%, rgb(63, 99, 136) 70%, rgb(63, 99, 136));
   position: fixed;  
   height: 100%;  
   top: 0;
