--- a/books/index.html
+++ b/books/index.html
@@ -1435,7 +1435,8 @@ html{background-color: #cdd6e0;}
   
 </style>
 
-<p> <div class="index_container"> The following are the last working-paper versions of my published papers.  Press on &quot;Abstract&quot; to display a summary of the paper. <br/> <br/></p>
+<p> <div class="index_container"> Here, you&#39;ll find a series of teaching materials that I&#39;ve developed over years. <strong> A (free) online book on Julia is coming soon!</strong>.</p>
+<p><br/> <br/></p>
  <h2> Teaching Material </h2>
 <div class="itemNoSpace"><ul>
 <li><p><a href="/books/assets/micro/microUndergrads_ALFARO.pdf"><strong> Microeconomics - Advanced Undergraduate Course</strong></a>.  Notes used for a course.</p>
