--- a/index.html
+++ b/index.html
@@ -2214,7 +2214,7 @@ padding:0;}
                     <!-- Add any additional content for this grid item -->
                 </div>
                 <div class="grid-item">
-                    <a href="https://alfaromartino.github.io/blog/">
+                    <a href="https://alfaromartino.github.io/blog/" target="_blank">
                         <div class="image-container">
                         <div class="hover-text">T.E.C.H.<br>(Blog)</div>                            
                             <img src="/assets/pics/dog_home.png">
