--- a/index.html
+++ b/index.html
@@ -2226,7 +2226,7 @@ padding:0;}
                     <!-- Add any additional content for this grid item -->
                 </div>
                 <div class="grid-item">
-                    <a href="https://alfaromartino.github.io/blog/" target="_blank">
+                    <a href="https://alfaromartino.github.io/blog/">
                         <div class="image-container">
                         <div class="hover-text">T.E.C.H.<br>(Blog)</div>                            
                             <img src="/assets/pics/dog_home.png">
@@ -2279,10 +2279,10 @@ padding:0;}
             <p> I received my <b style="color:white;"> PhD in Economics </b>from Aarhus University in 2017. During 2016, I had the opportunity to work under the guidance of Peter Neary at Oxford University. My BA is from Universidad de Buenos Aires, Argentina, which is located in my home country.            
             <br>
             <br>
-            I have been working at the Economics Department of the <b style="color:white;">University of Alberta</b> since 2017. In 2023, I have been promoted to <b style="color:white;">Associate Professor (with tenure)</b>.   My research interests include <b style="color:white;">International Trade and Industrial Organization</b>. I am also interested in programming and use Julia as my main programming language. 
+            I have been working at the Economics Department of the <b style="color:white;">University of Alberta</b> since 2017. In July 2023, I was promoted to <b style="color:white;">Associate Professor (with tenure)</b>.   My research interests include <b style="color:white;">International Trade and Industrial Organization</b>. My research primarily focuses on the <b style="color:white;">microeconomic aspects of international trade</b>, with a special emphasis on the role of <b style="color:white;">superstar firms</b>.
             <br>
             <br>
-            My research primarily focuses on the <b style="color:white;">microeconomic aspects of international trade</b>, with a special emphasis on the role of <b style="color:white;">superstar firms</b>.
+            I am also interested in <b style="color:white;">programming</b> and use <b style="color:white;">Julia</b> as my main programming language. 
             </p>            
           </div>
         </div>
