--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="Martin Alfaro">
+  <meta name="google-site-verification" content="V-7j9qHkmRvl0I5UgFLjzXLPEDKkHejOC9HZDQj10ik" />
   
   <title>Martin Alfaro</title>
   <link rel="icon" type="image/png"  href="/assets/MA2_logo.ico">
