--- a/books/index.html
+++ b/books/index.html
@@ -1374,14 +1374,14 @@ html{background-color: #cdd6e0;}
   } 
 </style>
 </p>
-<p> <div class="index_container"> Here, you&#39;ll find a series of teaching materials that I&#39;ve developed over years. <strong> A (free) online book on Julia is coming soon!</strong>.</p>
+<p> <div class="index_container"> Here, you&#39;ll find a series of teaching materials that I&#39;ve developed over the years. <strong> A (free) online book on Julia is coming soon!</strong>.</p>
  <h2> Teaching Material </h2>
 <div class="itemNoSpace"><ul>
-<li><p><a href="/books/assets/micro/microUndergrads_ALFARO.pdf"><strong> Microeconomics - Advanced Undergraduate Course</strong></a>.  Notes used for a course.</p>
+<li><p><a href="/books/assets/micro/microUndergrads_ALFARO.pdf"><strong> Microeconomics - Advanced Undergraduate Course</strong></a>. Notes used for the course I taught.</p>
 </li>
 </ul>
 <ul>
-<li><p><strong> International Graduate - Graduate Course</strong>. These notes are preliminaries. They do not include the material on monopolistic competition and firm heterogeneity, which I&#39;m rewriting from scratch.</p>
+<li><p><strong> International Economics - Graduate Course</strong>. These notes are preliminaries. They do not include the material on monopolistic competition and firm heterogeneity, which I&#39;m rewriting from scratch.</p>
 <ul>
 <li><p><a href="/books/assets/gradTrade/neoclassical_ALFARO.pdf">Gains of Trade in Neoclassical Models</a></p>
 </li>
