--- a/index.html
+++ b/index.html
@@ -7,19 +7,11 @@
 <!doctype html>
 <html lang="en">
 <head>  
-    <script type="text/javascript">
-    (function(c,l,a,r,i,t,y){
-        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
-        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
-        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
-    })(window, document, "clarity", "script", "hnli6wahth");
-</script>
-	
+    
   <!-- META -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="Martin Alfaro">
-  <meta name="google-site-verification" content="V-7j9qHkmRvl0I5UgFLjzXLPEDKkHejOC9HZDQj10ik" />
   
   <title>Martin Alfaro</title>
   <link rel="icon" type="image/png"  href="/assets/MA2_logo.ico">
@@ -55,6 +47,14 @@ header .jumbotron {
 }
 </style>
   <link rel="stylesheet" href="/css/custom.css">
+
+  <script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "hr8dewhck5");
+</script>
 
 </head>
 
@@ -1393,11 +1393,11 @@ padding:0;}
             <h2> About Me </h2>
           </div>
           <div class="modal-body" style="color:rgb(100, 157, 214) !important;">
-            <img src="/assets/pics/me01.jpg" class="pic_style">
+            <img src="/assets/pics/webpic.png" class="pic_style">
             <p> I received my <b style="color:white;"> PhD in Economics </b>from Aarhus University in 2017. During 2016, I had the opportunity to work under the guidance of Peter Neary at Oxford University. My BA is from Universidad de Buenos Aires (Argentina), located in my home country.            
             <br>
             <br>
-            I have been working at the Economics Department of the <b style="color:white;">University of Alberta</b> since 2017. In July 2023, I was promoted to <b style="color:white;">Associate Professor (with tenure)</b>.   My research interests include <b style="color:white;">International Trade and Industrial Organization</b>. My research primarily focuses on the <b style="color:white;">microeconomic aspects of international trade</b>, with a special emphasis on the role of <b style="color:white;">superstar firms</b>.
+            I have been working at the Economics Department of the <b style="color:white;">University of Alberta</b> since 2017. In July 2023, I was promoted to <b style="color:white;">Associate Professor (with tenure)</b>.   My research interests include <b style="color:white;">International Trade and Industrial Organization</b>. I focus on the <b style="color:white;">microeconomic aspects of international trade</b>, with a special emphasis on the role of <b style="color:white;">superstar firms</b>.
             <br>
             <br>
             I am also interested in <b style="color:white;">programming</b> and use <b style="color:white;">Julia</b> as my main language. 
