--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <!doctype html>
 <html lang="en">
 <head>  
-
+    
   <!-- META -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -1393,7 +1393,7 @@ padding:0;}
             <h2> About Me </h2>
           </div>
           <div class="modal-body" style="color:rgb(100, 157, 214) !important;">
-            <img src="/assets/pics/webpic.png" class="pic_style">
+            <img src="/assets/pics/webpic.png" class="pic_style" style="width:25%">
             <p> I received my <b style="color:white;"> PhD in Economics </b>from Aarhus University in 2017. During 2016, I had the opportunity to work under the guidance of Peter Neary at Oxford University. My BA is from Universidad de Buenos Aires (Argentina), located in my home country.            
             <br>
             <br>
