--- a/index.html
+++ b/index.html
@@ -1397,10 +1397,10 @@ padding:0;}
             <p> I received my <b style="color:white;"> PhD in Economics </b>from Aarhus University in 2017. During 2016, I had the opportunity to work under the guidance of Peter Neary at Oxford University. My BA is from Universidad de Buenos Aires (Argentina), located in my home country.            
             <br>
             <br>
-            I have been working at the Economics Department of the <b style="color:white;">University of Alberta</b> since 2017. In July 2023, I was promoted to <b style="color:white;">Associate Professor (with tenure)</b>.   My research interests include <b style="color:white;">International Trade and Industrial Organization</b>. I focus on the <b style="color:white;">microeconomic aspects of international trade</b>, with a special emphasis on the role of <b style="color:white;">superstar firms</b>.
+            I have been working at the Economics Department of the <b style="color:white;">University of Alberta</b> (Canada) since 2017. I was promoted to <b style="color:white;">Associate Professor</b> (with tenure) in July 2023.  My research interests include <b style="color:white;">International Trade and Industrial Organization</b>, with a focus on the <b style="color:white;">microeconomic aspects of international trade</b>. I primarly study the role of <b style="color:white;">superstar firms</b>.
             <br>
             <br>
-            I am also interested in <b style="color:white;">programming</b> and use <b style="color:white;">Julia</b> as my main language. 
+            I am also interested in <b style="color:white;">programming</b>, and use <b style="color:white;">Julia</b> as my main language. 
             </p>            
           </div>
         </div>
