--- a/index.html
+++ b/index.html
@@ -1397,7 +1397,7 @@ padding:0;}
             <p> I received my <b style="color:white;"> PhD in Economics </b>from Aarhus University in 2017. During 2016, I had the opportunity to work under the guidance of Peter Neary at Oxford University. My BA is from Universidad de Buenos Aires (Argentina), located in my home country.            
             <br>
             <br>
-            I have been working at the Economics Department of the <b style="color:white;">University of Alberta</b> (Canada) since 2017, and was promoted to <b style="color:white;">Associate Professor</b> (with tenure) in July 2023.  My research interests include <b style="color:white;">International Trade and Industrial Organization</b>, with a focus on the <b style="color:white;">microeconomic aspects of international trade</b>. I primarily investigate the role of <b style="color:white;">superstar firms</b> in open economies.
+            I have been working at the Economics Department of <b style="color:white;">University of Alberta</b> (Canada) since 2017, and was promoted to <b style="color:white;">Associate Professor</b> (with tenure) in July 2023.  My research interests include <b style="color:white;">International Trade and Industrial Organization</b>, with a focus on the <b style="color:white;">microeconomic aspects of international trade</b>. I primarily investigate the role of <b style="color:white;">superstar firms</b> in open economies.
             <br>
             <br>
             I am also interested in <b style="color:white;">programming</b>, and use <b style="color:white;">Julia</b> as my main language. 
