--- a/books/index.html
+++ b/books/index.html
@@ -1395,6 +1395,8 @@ html{background-color: #cdd6e0;}
 </li>
 <li><p><a href="/books/assets/gradTrade/recentFacts_ALFARO.pdf">Some Recent Empirical Facts</a></p>
 </li>
+<li><p><a href="/books/assets/gradTrade/CES_ALFARO.pdf">CES Demand</a></p>
+</li>
 </ul>
 </li>
 </ul></div>
